--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!--Course Homepage-->
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -8,5 +9,8 @@
 </head>
 <body>
   <h1>Jennifer  Arthur</h1>
+  <ul>
+    <li><a href= "prototype/index.html">Prototype Assignment</a></li>
+  </ul>
 </body>
 </html>
