--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Jennifer Arthur" />
 </head>
 <body>
-  <h1>Jennifer  Arthur</h1>
+  <h1>Jennifer  Arthur!</h1>
   <ul>
     <li><a href= "prototype/index.html">Prototype Assignment</a></li>
   </ul>
