--- a/prototype/index.html
+++ b/prototype/index.html
@@ -1,48 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang= "en">
+<head>
+    <title>Gordo</title>
+   <meta charset="UTF-8" />
+   <meta name="description" content="Monkeys in Space">
+   <!-- I did not use keywords or author because they are historical-->
+    
+</head>
+<body>
+    <header class = "primary">
+<h1>Gordo</h1>
+</header>
 
-Gordo
+<h2>Old Reliable</h2>
 
-Old Reliable
+<p>Gordo was one of the first monkeys to make it into space as part of NASA's space program. Eight monkeys had flown on NASA missions before him, 
+five of whom went by the name of Albert.</p>
 
-Gordo was one of the first monkeys to make it into space as part of NASA's space program. Eight monkeys had flown on NASA missions before him, five of whom went by the name of Albert.
-
-Gordo's historic flight took place on December 13, 1958 when he took off from Cape Canaveral for a 15 minute flight into space. Even though he was weightless for over 8 minutes the on-board instruments indicated that Gordo enjoyed his journey into space. Scientists monitoring the flight were pleased to note that the only slight side effect Gordo suffered from the entry into space was a modest slowing of his pulse.
-
-
-The Mission
-
-The rocket carrying Gordo into space would take off from the Atlantic Missile Range at Cape Canaveral, travel further than any monkey had ever travelled before - over 1,500 miles - and reach a height of 310 miles (500 km) before returning to Earth and landing in the South Atlantic, 1,302 nautical miles south of Cape Canaveral.
-
-"We all heard the rumors that they want to send a monkey up first. Well, none of us wants to think that they're gonna send a monkey up to do a man's work ... what they're trying to do to us is send a man up to do a monkey's work."
-
-Deke Slayton, Mercury Seven Astronaut
+<p>Gordo's historic flight took place on December 13, 1958 when he took off from Cape Canaveral for a 15 minute flight into space. Even though he was
+weightless for over 8 minutes the on-board instruments indicated that Gordo enjoyed his journey into space. Scientists monitoring the flight were 
+pleased to note that the only slight side effect Gordo suffered from the entry into space was a modest slowing of his pulse.</p>
 
 
-The Jupiter AM-13
+<h3>The Mission</h3>
 
-The Jupiter IRBM (Intermediate Range Ballistic Missile) was originally developed by the US Army as a long-range successor to its PGM-11 Redstone missile, but was eventually taken over and deployed by the USAF for political reasons. It was also the only one of the United States' early stategic ballistic missiles with some mobility.
+<p>The rocket carrying Gordo into space would take off from the Atlantic Missile Range at Cape Canaveral, travel further than any monkey had ever 
+travelled before - over 1,500 miles - and reach a height of 310 miles (500 km) before returning to Earth and landing in the South Atlantic, 1,302
+nautical miles south of Cape Canaveral.</p>
+
+<p><blockqoute>"We all heard the rumors that they want to send a monkey up first. Well, none of us wants to think that they're gonna send a monkey up 
+to do a man's work ... what they're trying to do to us is send a man up to do a monkey's work."
+
+<cite>Deke Slayton, Mercury Seven Astronaut</cite></blockqoute></p>
+
+
+<h4>The Jupiter AM-13</h4>
+
+<p>The Jupiter IRBM (Intermediate Range Ballistic Missile) was originally developed by the US Army as a long-range successor to its PGM-11 Redstone
+missile, but was eventually taken over and deployed by the USAF for political reasons. It was also the only one of the United States' early stategic
+ballistic missiles with some mobility.</p>
 
 Flight Date: December 13, 1958
 Launch Time: 03.53 EST
 
 
-The Journey
+<h3>The Journey</h3>
 
-Gordo wore a specially customised space suit custom made for a monkey about one foot tall. The space suit was fitted with instruments, including temperature meters and microphones which recorded his historic suborbital journey, considered one of the outstanding achievements of space research.
+<p>Gordo wore a specially customised space suit custom made for a monkey about one foot tall. The space suit was fitted with instruments, including 
+temperature meters and microphones which recorded his historic suborbital journey, considered one of the outstanding achievements of space research.</p>
+<table>
+<tr>
+    <td>Flight Time: 15 Minutes</td>
+    </tr>
+    <tr>
+    <td>Apogee: 310 Miles</td>
+</tr>
+</table>
+<table>
+<caption>References</caption>
 
-Flight Time: 15 Minutes
-Apogee: 310 Miles
 
+<tr><td>Remembering 'Gordo'</td></tr>
+<tr><td>BBC - Monkey Lost After Space Flight</td></tr>
+<tr><td>Gordo and Laika - Space Pioneers</td></tr>
+</table>
 
-References
-
-Remembering 'Gordo'
-BBC - Monkey Lost After Space Flight
-Gordo and Laika - Space Pioneers
-
-
-The Famous Primates web site is a Web Standardistas production.
+<footer>The Famous Primates web site is a Web Standardistas production.
 XHTML + CSS released under a Creative Commons Attribution 3.0 license.
-Photography Copyright iStockphoto.
+Photography &copy iStockphoto.
+</footer>
+</body>
 </html>
