--- a/prototype/index.html
+++ b/prototype/index.html
@@ -64,12 +64,12 @@ ballistic missiles with some mobility.</p>
 temperature meters and microphones which recorded his historic suborbital journey, considered one of the outstanding achievements of space research.</p>
 
 <table>
-<caption>References</caption>
+<caption><strong>References</strong></caption>
 
 
-<tr><td>Remembering 'Gordo'</td></tr>
-<tr><td>BBC - Monkey Lost After Space Flight</td></tr>
-<tr><td>Gordo and Laika - Space Pioneers</td></tr>
+<tr><td><cite>Remembering 'Gordo'</cite></td></tr>
+<tr><td><cite>BBC - Monkey Lost After Space Flight</cite></td></tr>
+<tr><td><cite>Gordo and Laika - Space Pioneers</cite></td></tr>
 </table>
 
 <footer class = "primary"><h6>The Famous Primates web site is a Web Standardistas production.
