Updates from class

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang= "en">
 <head>
-    <title>Gordo</title>
+    <title>IFSC 1310 | Jennifer Arthur</title>
    <meta charset="UTF-8" />
    <meta name="description" content="Monkeys in Space">
    <!-- I did not use keywords or author because they are historical-->
@@ -17,6 +17,16 @@
 
 <p>Gordo was one of the first monkeys to make it into space as part of NASA's space program. Eight monkeys had flown on NASA missions before him, 
 five of whom went by the name of Albert.</p>
+ <caption><strong>Monkeys in Space</strong></caption>
+ <table>
+     <tr><th scope ="col">Name</th ><th scope = "col">Age</th><th scope = "col">Height</th><th scope = "col">Weight</th><th scope = "col">Deceased</th></tr>
+     <tr><td>Albert</td><td>3</td><td>23in</td><td>88lbs</td><td>Yes</td></tr>
+     <tr><td>Gordo</td><td>5</td><td>25in</td><td>103lbs</td><td>No</td></tr>
+     <tr><td>Gordo</td><td>2</td><td>25in</td><td>103lbs</td><td>No</td></tr>
+     <tr><td>Albert</td><td>4</td><td>28in</td><td>122lbs</td><td>Yes</td></tr>
+     <tr><td>Albert</td><td>3</td><td>24in</td><td>89lbs</td><td>Yes</td></tr>
+     <tr><td>Albert</td><td>5</td><td>24in</td><td>89lbs</td><td>Yes</td></tr>
+ </table>
 
 <p>Gordo's historic flight took place on December 13, 1958 when he took off from Cape Canaveral for a 15 minute flight into space. Even though he was
 weightless for over 8 minutes the on-board instruments indicated that Gordo enjoyed his journey into space. Scientists monitoring the flight were 
