--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <ul>
     <li><a href= "prototype/index.html">Prototype Assignment</a></li>
+    <li><a href = "css-demo/index.html">CSS-Demo</a></li>
   </ul>
 </body>
 </html>
