--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <ul>
     <li><a href= "prototype/index.html">Prototype Assignment</a></li>
     <li><a href = "css-demo/index.html">CSS-Demo</a></li>
+    <li><a href ="assets/img/Flexbox.jpeg">FlexBox Froggy</a></li>
   </ul>
 </body>
 </html>
