--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>IFSC 1310 | Jennifer Arthur</title>
   <meta name="description" content="Assignments for IFSC 1310" />
   <meta name="author" content="Jennifer Arthur" />
+  <link rel = "stylesheet" href = "assets/css/style.css" type ="text/css"/>
 </head>
 <body>
   <h1>Jennifer  Arthur</h1>
