--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <li><a href= "prototype/index.html">Prototype Assignment</a></li>
     <li><a href = "css-demo/index.html">CSS-Demo</a></li>
     <li><a href ="assets/img/Flexbox.jpeg">FlexBox Froggy</a></li>
+    <li>Positioning Lab
+    <ul>
+      <li><a href= "positioning/float-1.html">Float 1</a></li>
+      <li><a href= "positioning/float-2.html">Float 2</a></li>
+      <li><a href= "positioning/absolute-1.html">Absolute 1</a></li>
+      <li><a href= "positioning/absolute-2.html">Absolute 2</a></li>
+    </ul>
+    </li>
+    
   </ul>
 </body>
 </html>
