--- a/positioning/float-1.html
+++ b/positioning/float-1.html
@@ -29,21 +29,50 @@ body {
 	width: 800px;
 	margin-right: auto;
 	margin-left: auto;
+	padding-top: 20px;
 }
 #red {
 	background-color: #900;
+	width:370px;
+	height:150px;
+	margin-left:20px;
+	margin-bottom:20px;
+	
+	float:left;
+	
+	
 }
 #green {
 	background-color: #090;
+	position:relative;
+	width:370px;
+	height:150px;
+	margin-left:20px;
+	margin-bottom: 20px;
+	float:left;
+	
+	
 }
 #blue {
 	background-color: #00F;
+	width:370px;
+	height:150px;
+	margin-left:20px;
+	margin-bottom:20px;
+	float:left;
 }
 #purple {
 	background-color: #63C;
+	width:370px;
+	height:150px;
+	margin-left:20px;
+	margin-bottom:20px;
+	float:left;
 }
 #footer {
 	background-color: #666;
+	margin:20px;
+	clear:both;
 }
 h1 {
 	color: #000;
