--- a/positioning/float-2.html
+++ b/positioning/float-2.html
@@ -29,21 +29,50 @@ body {
 	width: 800px;
 	margin-right: auto;
 	margin-left: auto;
+	
 }
 #red {
 	background-color: #900;
+	width:175px;
+	float: left;
+	margin-left:20px;
+	margin-bottom:20px;
+	margin-top: 20px;
+	height:200px;
 }
 #green {
 	background-color: #090;
+	width:175px;
+	float:left;
+	margin-left:20px;
+	margin-top:20px;
+	height:200px;
+	
 }
 #blue {
 	background-color: #00F;
+	width:175px;
+	float:left;
+	margin-left:20px;
+	margin-top:20px;
+	height:200px;
+	
 }
 #purple {
 	background-color: #63C;
+	width:175px;
+	float:left;
+	margin-left:20px;
+	margin-top:20px;
+	height:200px;
 }
 #footer {
 	background-color: #666;
+	clear:both;
+	
+	margin:20px;
+	
+	
 }
 h1 {
 	color: #000;
