--- a/positioning/absolute-1.html
+++ b/positioning/absolute-1.html
@@ -32,18 +32,45 @@ body {
 }
 #red {
 	background-color: #900;
+	width:120px;
+	height: 120px;
+	position:absolute;
+	top:0;
+	left:0;
+	
 }
 #green {
 	background-color: #090;
+	width:120px;
+	height:120px;
+	position:absolute;
+	top:0;
+	right:0;
 }
 #blue {
 	background-color: #00F;
+	width:120px;
+	height: 120px;
+	position:absolute;
+	bottom:0;
+	left:0;
 }
 #purple {
 	background-color: #63C;
+	width:120px;
+	height: 120px;
+	position:absolute;
+	bottom:0;
+	right:0;
 }
 #footer {
 	background-color: #666;
+	width: 120px;
+	height: 120px;
+	position:relative;
+	margin-left:320px;
+	margin-top:20px;
+	margin-bottom: 20px;
 }
 h1 {
 	color: #000;
@@ -54,7 +81,7 @@ h1 {
 </head>
 
 <body>
-<h1>Absolute 1</h1>
+<h1>Absolute Positioning 1</h1>
 <div id="wrapper">
   <div id="red">Red</div>
   <div id="green">Green</div>
