--- a/positioning/absolute-2.html
+++ b/positioning/absolute-2.html
@@ -17,6 +17,7 @@ body {
 	line-height: 24px;
 }
 #wrapper {
+	position:relative;
 	background-color: #FFF;
 	border-top-width: 1px;
 	border-right-width: 1px;
@@ -32,18 +33,42 @@ body {
 }
 #red {
 	background-color: #900;
+	position: absolute;
+	top:0;
+	left:0;
+	width:150px;
+	height: 150px;
 }
 #green {
 	background-color: #090;
+	position: absolute;
+	top:0;
+	right:0;
+	width:150px;
+	height: 150px;
 }
 #blue {
 	background-color: #00F;
+	position: absolute;
+	bottom:0;
+	left:0;
+	width:150px;
+	height: 150px;
 }
 #purple {
 	background-color: #63C;
+	position: absolute;
+	bottom:0;
+	right:0;
+	width:150px;
+	height: 150px;
 }
 #footer {
 	background-color: #666;
+	width:150px;
+	height: 150px;
+	margin:325px;
+	
 }
 h1 {
 	color: #000;
