updating multiple things

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <li><a href= "positioning/absolute-2.html">Absolute 2</a></li>
     </ul>
     </li>
+    <li><a href= "assets/img/Gravit.jpeg">Photo Manipulation</a></li>
+    <li><a href= "assets/img/Icon.jpeg">Icon</a></li>
+<li><a href= "dragon/index.html">Dragon Final Project</a></li>
     
   </ul>
 </body>
