--- a/positioning/absolute-1.html
+++ b/positioning/absolute-1.html
@@ -71,6 +71,7 @@ body {
 	margin-left:320px;
 	margin-top:20px;
 	margin-bottom: 20px;
+	/*could just use margin auto instead of position and margin*/
 }
 h1 {
 	color: #000;
