--- a/positioning/absolute-2.html
+++ b/positioning/absolute-2.html
@@ -31,6 +31,7 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 }
+/*put height in wrapper,use vw instead of px to make it responsive*/
 #red {
 	background-color: #900;
 	position: absolute;
