--- a/positioning/float-1.html
+++ b/positioning/float-1.html
@@ -16,6 +16,16 @@ body {
 	text-align: center;
 	line-height: 24px;
 }
+/*
+could add 
+.tile{
+	width:370px;
+	height:150px;
+	float:left;
+	margin-left:20px;
+	margin-bottom:20px;
+}
+*/
 #wrapper {
 	background-color: #FFF;
 	border-top-width: 1px;
