Updating Main Page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
     <li><a href= "assets/img/Gravit.jpeg">Photo Manipulation</a></li>
     <li><a href= "assets/img/Icon.jpeg">Icon</a></li>
 <li><a href= "dragon/index.html">Dragon Final Project</a></li>
+<li><a href="cycle-lab/index.html">Cycle Lab</a></li>
+<li><a href= "dragon-revision/index.html">Dragon Final Project Revision</a></li>
+
     
   </ul>
+  <h2>Dragon Project Revision and Reflection</h2>
+  
+  
+  <h2>Thoughts on Progressive Enhancement</h2>
+  <p>Progressive Enchancement is the separation of HTML,CSS and JAVASCRIPT.It's focus is on building the website for the content,
+  not the browser.By focusing on the content and building the website in layers, the website becomes more accesible for a larger 
+  range of people, because all of the browsers are able to at least display the content.</p>
+  <p>Progressive enhancement is important in modern web development because it is accessibility-oriented.It takes extra effort, but it
+  broadens the horizons of who has access to the content.Learn more about Progressive Enhancement <a href="https://www.webfx.com/blog/web-design/progressive-enhancement/">Here</a></p>
+  
 </body>
 </html>
