--- a/dragon/index.html
+++ b/dragon/index.html
@@ -36,7 +36,7 @@
 cargo to Earth, a feat previously achieved only by governments. It is the only spacecraft currently flying that is capable of returning 
 significant amounts of cargo to Earth. Currently Dragon carries cargo to space, but it was designed from the beginning to carry humans.
 Under an agreement with NASA, SpaceX is now developing the refinements that will enable Dragon to fly crew. Dragon's first manned test
-flight is expected to take place as early as 2018</p>
+flight is expected to take place as early as 2018. Find more information <a href="https://www.spacex.com">here</a></p>
 </section>
 
   <section id="articles"  class="container">
@@ -113,7 +113,7 @@ experiments, radiation effects research, and many other microgravity tests.</li>
         </header>
         <p>SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in
         2002 to revolutionize space technology, with the ultimate goal of enabling people to live on other planets.
- <a href="#">Read More &raquo;</a></p>
+ <a href="https://www.spacex.com">Read More &raquo;</a></p>
         <footer>Widget Footer</footer>
       </article>
       <article class="widget">
@@ -132,13 +132,13 @@ experiments, radiation effects research, and many other microgravity tests.</li>
 <tr><td>6/3/2017 </td><td> NASA RESUPPLY TO ISS (FLIGHT 11) </td><td> CAPE CANAVERAL</td><td> DRAGON & FALCON 9 </td> </tr>
 </table>
 
-          <a href="#">Read More &raquo;</a>
+          <a href="https://www.spacex.com">Read More &raquo;</a>
         <footer>Widget Footer</footer>
       </article>
     </div>
   </aside>
   <footer id="colophon" role="contentinfo">
-    <h6> "&copy;SpaceX | 2021 Jennifer Arthur"
+    <h6> &copy;SpaceX | 2021 Jennifer Arthur<a href="mailto:jarthur@ualr.edu">Contact Me</a>
     </h6>
   </footer>
 </body>
