--- a/dragon-revision/contact.html
+++ b/dragon-revision/contact.html
@@ -29,7 +29,7 @@
   <section id="content" class="container">
    <a href="https://jarthur.wufoo.com/forms/z1l74y3n0m5rtdk/">Please Fill out this form</a>
   <footer id="colophon" role="contentinfo">
-    <h6> "&copy;SpaceX | 2021 Jennifer Arthur"
+    <h6> &copy;SpaceX | 2021 Jennifer Arthur <a href="mailto:jarthur@ualr.edu">Contact Me</a>
     </h6>
   </footer>
 </body>
