--- a/dragon-revision/faqs.html
+++ b/dragon-revision/faqs.html
@@ -130,7 +130,7 @@ parachutes in the event of an anomaly with a third parachute.</p>
 
 
 <footer id="colophon" role="contentinfo">
-    <h6> "&copy;SpaceX | 2021 Jennifer Arthur"
+    <h6> &copy;SpaceX | 2021 Jennifer Arthur <a href="mailto:jarthur@ualr.edu">Contact Me</a>
     </h6>
   </footer>
 </body>
