--- a/dragon-revision/history.html
+++ b/dragon-revision/history.html
@@ -42,7 +42,7 @@ many of the avionics reused while the heat shield, batteries and components expo
 were replaced.</p>
 
   <footer id="colophon" role="contentinfo">
-    <h6> "&copy;SpaceX | 2021 Jennifer Arthur"
+    <h6> &copy;SpaceX | 2021 Jennifer Arthur<a href="mailto:jarthur@ualr.edu">Contact Me</a>
     </h6>
   </footer>
 </body>
