--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
   </ul>
   <h2>Dragon Project Revision and Reflection</h2>
   
+  <p>I asked my husband to check out my dragon website. He pointed out that a couple of fields on the contact form didn't work
+  and that the read more links didn't go anywhere. I fixed the form and added external website links to the " read more" links.</p>
+
+<p>I have really enjoyed this semester. I find the content interesting.I am fascinated by the idea of building websites, but I know
+if that is an area I want to pursue I will have to put in more effort and practice. I started the semester out strong, but once
+some of my work wasn't saved,it derailed my progress. If I could go back I would have taken care of that right away instead of 
+letting it get away from me.</p>
+
+<p>The Dragon project helped me to understand the process better. But I think I will need to build multiple websites to get the 
+information to really stick. If I could go back, I would have started on the Dragon project way sooner. If I would have started sooner
+I would have felt more comfortable asking questions, when I encountered a problem.</p>
+  
   
   <h2>Thoughts on Progressive Enhancement</h2>
   <p>Progressive Enchancement is the separation of HTML,CSS and JAVASCRIPT.It's focus is on building the website for the content,
