--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <li><a href= "assets/img/Gravit.jpeg">Photo Manipulation</a></li>
     <li><a href= "assets/img/Icon.jpeg">Icon</a></li>
 <li><a href= "dragon/index.html">Dragon Final Project</a></li>
-<li><a href="cycle-lab/index.html">Cycle Lab</a></li>
+<li><a href="cycle-lab/index.html">Cycle Lab(JavaScript Slide Show)</a></li>
 <li><a href= "dragon-revision/index.html">Dragon Final Project Revision</a></li>
 
     
@@ -34,7 +34,7 @@
   <h2>Dragon Project Revision and Reflection</h2>
   
   <p>I asked my husband to check out my dragon website. He pointed out that a couple of fields on the contact form didn't work
-  and that the read more links didn't go anywhere. I fixed the form and added external website links to the " read more" links.</p>
+  and that the read more links didn't go anywhere. I fixed the form and added external website links(SpaceX) to the " read more" links.</p>
 
 <p>I have really enjoyed this semester. I find the content interesting.I am fascinated by the idea of building websites, but I know
 if that is an area I want to pursue I will have to put in more effort and practice. I started the semester out strong, but once
